--- a/assets/style.css
+++ b/assets/style.css
@@ -684,5 +684,22 @@ noranjost (skoraj bela, pomemben opacity)
     transform: translateY(-0.1rem);
 }
 
+/* ==== LOADING SCREEN ===== */
+
+#loading_screen {
+    background: white;
+    position:absolute;
+    top:0px;
+    right:0px;
+    bottom:0px;
+    left:0px;
+    display: block;
+    z-index: 1;
+}
+
+
+
+
+
 
 
